apps/talos/hello-world/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
  namespace: hello-world
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - hello.hogwarts.zone
  tls:
    - hostname: hello.hogwarts.zone
      secretName: hello-world-tls
  rules:
    - backendRefs:
        - name: hello-world
          port: 80
